# similaritySearch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  run-tests.yml
monitoring/: README.md
src/nexmart/: main.py
src/nexmart/api/: endpoints.py  models.py
src/nexmart/core/: config.py  constants.py  dependencies.py  exceptions.py
src/nexmart/services/: product_similarity.py
src/similarity_search/api/: endpoints.py
src/similarity_search/core/: config.py  exceptions.py  logging.py
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_config.py  test_dependencies.py  test_exceptions.py  test_models.py  test_product_similarity.py
tests/utils/: models.py
