[project]
name = "nexmart"
version = "0.1.0"
description = "API for finding similar products using embeddings"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "sentence-transformers==3.3.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "numpy<2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexmart"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests"
]
addopts = "--cov"

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "requests==2.32.3"
]
lint = [
    "pre-commit==4.0.1",
    "black==24.10.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "isort==5.13.2",
    "bandit==1.8.0",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
    "types-setuptools>=75.0",
    "types-toml>=0.10"
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["E501"] # line length is handled by black

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["src"]

[tool.coverage.run]
source = ["src/nexmart"]
omit = [
    "src/nexmart/main.py",
    "*/__init__.py",
    "tests/*",
    "src/nexmart/api/endpoints.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

# Default coverage settings
fail_under = 90
show_missing = true
